add createnotes and deletenotes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -69,7 +69,7 @@ input::placeholder, textarea::placeholder {
 .note-input__title__char-limit {
   font-size: 14px;
   text-align: right;
-  color: #aaa;
+  color: rgb(255, 0, 0);
 }
 
 .note-input__body {
@@ -95,6 +95,8 @@ input::placeholder, textarea::placeholder {
   grid-template-rows: minmax(min-content, max-content);
   gap: 16px;
   margin-bottom: 48px;
+  margin-left: 48px;
+  margin-right: 48px;
 }
 
 .notes-list__empty-message {
@@ -149,7 +151,7 @@ input::placeholder, textarea::placeholder {
 }
 
 .note-item__delete-button {
-  border-right: 1px solid #aaa;
+  /* border-right: 1px solid #aaa; */
   color: #ff5f52;
 }
 
